--- a/AxoManager/Views/Shared/_Layout.cshtml
+++ b/AxoManager/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Analytics">Analytics</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Recruitment">Recruitment</a>
+                        </li>
                     </ul>
                 </div>
             </div>
